# parcom

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/example/: Cargo.toml
crates/parcom/: Cargo.toml
crates/parcom-base/: Cargo.toml
crates/parcom-base/src/: either.rs  either_both.rs  error.rs  lib.rs  reason.rs
crates/parcom-core/: Cargo.toml
crates/parcom-core/src/: buffer_writer.rs  lib.rs  measured.rs  never.rs  parse_error.rs  parse_result.rs  parser.rs  primitive.rs  runner.rs  sequence.rs  stream.rs  unknown.rs
crates/parcom-internals/: Cargo.toml
crates/parcom-internals/src/: future.rs  lib.rs  reactive.rs  shortvec.rs
crates/parcom-measures/: Cargo.toml
crates/parcom-measures/src/: count.rs  lib.rs  line_colmn.rs
crates/parcom-metrics/: Cargo.toml
crates/parcom-metrics/src/: count.rs  end_of_line.rs  lib.rs  line_colmn.rs  location.rs
crates/parcom-parsers/: Cargo.toml
crates/parcom-parsers/src/: bin_expr.rs  binary_expr.rs  combinator.rs  extension.rs  iterate.rs  iterative.rs  lib.rs  primitive.rs  repeat.rs  util.rs
crates/parcom-parsers/src/bin_expr/: parser.rs
crates/parcom-parsers/src/binary_expr/: parser.rs
crates/parcom-parsers/src/combinator/: and_then.rs  bin_expr.rs  discard.rs  join.rs  map.rs  optional.rs  or.rs  reference.rs  repeat.rs  unify.rs
crates/parcom-parsers/src/extension/: as_ref.rs  discard.rs  fold.rs  iterative.rs  join.rs  maps.rs  never_fault.rs  optional.rs  or.rs  parser.rs  repeat.rs  repeat_n.rs  repeat_range.rs  then.rs  unify.rs
crates/parcom-parsers/src/extensions/: iterative.rs  parser.rs
crates/parcom-parsers/src/iterative/: at_least.rs  collect.rs  fold.rs  map_each.rs  map_while.rs  scan.rs  take.rs  try_map_each.rs
crates/parcom-parsers/src/primitive/: any.rs  atom.rs  slice.rs  str.rs  the.rs
crates/parcom-parsers/src/repeat/: control.rs  controller.rs  controllers.rs
crates/parcom-runner-core/: Cargo.toml
crates/parcom-runner-core/src/: lib.rs
crates/parcom-runners/: Cargo.toml
crates/parcom-runners/src/: default_runner.rs  lib.rs
crates/parcom-runners/src/default_runner/: parse.rs  parse_iterative.rs  sequence.rs
crates/parcom-runners/src/default_runner/sequence/: advance.rs  segments.rs
crates/parcom-sequence-core/: Cargo.toml
crates/parcom-sequence-core/src/: buffer_writer.rs  lib.rs  load_info.rs
crates/parcom-sequence-sources/: Cargo.toml
crates/parcom-sequence-sources/src/: iterator_source.rs  utf8_validator.rs
crates/parcom-sequences/: Cargo.toml
crates/parcom-sequences/src/: buffer_strategy.rs  generic.rs  lib.rs
crates/parcom-streams/: Cargo.toml
crates/parcom-streams-core/: Cargo.toml
crates/parcom-streams-core/src/: buffer_writer.rs  lib.rs
crates/parcom-streams/src/: async_stream.rs  buffer_writer.rs  generic_stream.rs  lib.rs  single_buffer_stream.rs  slice.rs  str.rs  stream_control.rs  stream_driver.rs  stream_source.rs  streams.rs  task_spawner.rs  tokio_stream.rs  util.rs
crates/parcom-streams/src/async_stream/: generic_stream.rs  str_char_stream.rs  stream_source.rs
crates/parcom-streams/src/async_stream/generic_stream/: node.rs
crates/parcom-streams/src/async_stream/generic_stream/node/: ensure_init.rs  get_or_init_owned.rs
crates/parcom-streams/src/buffer_writer/: vec_buffer_writer.rs  vecdeque_buffer_writer.rs
crates/parcom-streams/src/generic_stream/: advance.rs  control.rs  loader.rs  parameter.rs  segment_iter.rs  segments.rs
crates/parcom-streams/src/stream_control/: vec_control.rs  vecdeque_control.rs
crates/parcom-streams/src/stream_source/: iterator_source.rs  utf8_validator.rs
crates/parcom-streams/src/streams/: async_stream.rs
crates/parcom-streams/src/task_spawner/: thread_spawner.rs
crates/parcom-streams/src/tokio_stream/: once_init.rs
crates/parcom-streams/src/util/: borrowing_fut.rs  getter.rs  identity.rs  into_future_fn.rs  notify.rs  once_cell.rs  once_init.rs  oneshot.rs  pin_option.rs  trace_cell.rs
crates/parcom-util/: Cargo.toml
crates/parcom-util/src/: extension.rs  lib.rs
crates/parcom/src/: lib.rs
example/: Cargo.toml
example/src/: bin_expr.rs  binary_expr.rs  cache.rs  line_chart.rs  main.rs  parse.rs  parser.rs  repeat.rs
example/src/parse/: binary_expr.rs
example/src/parser/: binary_expr.rs  cache.rs
parcom/: Cargo.toml
parcom-core/: Cargo.toml
parcom-core/src/: foreign.rs  lib.rs  never.rs  parse_result.rs  result.rs
parcom-macros/macros/: Cargo.toml
parcom-macros/macros-impl/: Cargo.toml
parcom-macros/macros-impl/src/: lib.rs
parcom-std/: Cargo.toml
parcom-std/src/: either.rs  internal.rs  lib.rs  parse.rs  parser.rs  primitive.rs
parcom-std/src/binary_expr/: parser.rs
parcom-std/src/parser/: extension.rs
parcom-std/src/primitive/: str.rs
parcom-stream/: Cargo.toml
parcom-stream/src/: from_source.rs
parcom/src/: lib.rs  locatable.rs  packrat.rs  standard.rs  stream.rs
parcom/src/foreign/: parser.rs
parcom/src/foreign/parser/: str.rs
parcom/src/foreign/stream/: slice.rs  str.rs
parcom/src/locatable/: measure.rs
parcom/src/packrat/: boundcached.rs  cached.rs
parcom/src/standard/: binary_expr.rs  maps.rs  optional.rs  parse.rs  parser.rs
parcom/src/standard/parse/: binary_expr.rs  into_parser.rs
parcom/src/standard/parser/: as_ref.rs  binary_expr.rs  extension.rs  iterate.rs  join.rs  or.rs  repeat.rs  repeat_n.rs
parcom/src/standard/parser/binary_expr/: combinated.rs  looping.rs  parser.rs  recursion.rs
parcom/src/standard/parser/extension/: as_ref.rs  discard.rs  fold.rs  iterate.rs  join.rs  maps.rs  never_fault.rs  optional.rs  or.rs  repeat.rs  repeat_n.rs  unify.rs
parcom/src/stream/: buffer_writer.rs
parser/: Cargo.toml
parser/src/: foreigns.rs  from_read.rs  lib.rs  packrat.rs  standard_extension.rs  streams.rs
parser/src/foreign/: parser.rs  stream.rs
parser/src/foreigns/: slice.rs
parser/src/packrat/: boundcache.rs  cached.rs  smart_pointer.rs
parser/src/standard/: join.rs  (+1 more)
sample/: Cargo.toml
sample/src/: main.rs
(+40 files in other folders)
