[workspace]
members = ["crates/*", "example"]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2021"

[workspace.dependencies]
parcom-core = { path = "crates/parcom-core" }
parcom-base = { path = "crates/parcom-base" }
parcom-parsers = { path = "crates/parcom-parsers" }
parcom-streams = { path = "crates/parcom-streams" }
parcom-metrics = { path = "crates/parcom-metrics" }
parcom-internals = { path = "crates/parcom-internals" }
mockalloc = "0.1.2"
pollster = "0.3.0"
tokio = { version = "1.41.0", default-features = false }
