[workspace]
members = ["crates/*", "example"]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.41.0" }
parcom-core = { path = "crates/parcom-core" }
parcom-util = { path = "crates/parcom-util" }
parcom-parsers = { path = "crates/parcom-parsers" }
parcom-streams = { path = "crates/parcom-streams" }
parcom-metrics = { path = "crates/parcom-metrics" }
parcom-internals = { path = "crates/parcom-internals" }
parcom-streams-core = { path = "crates/parcom-streams-core" }
mockalloc = "0.1.2"
pollster = "0.3.0"
pin-project = "1.1.10"
rand = "0.9.2"
slab = "0.4.11"
futures-core = "0.3.31"
