[workspace]
members = [ "crates/*", "example" ]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.6.0"

[workspace.dependencies]
futures-core = "0.3.31"
mockalloc = "0.1.2"
parcom-core = { path = "crates/parcom-core" }
parcom-internals = { path = "crates/parcom-internals" }
parcom-metrics = { path = "crates/parcom-metrics" }
parcom-parsers = { path = "crates/parcom-parsers" }
parcom-runner-core = { path = "crates/parcom-runner-core" }
parcom-sequence-core = { path = "crates/parcom-sequence-core" }
parcom-sequence-controls = { path = "crates/parcom-sequence-controls" }
parcom-sequence-sources = { path = "crates/parcom-sequence-sources" }
parcom-sequences = { path = "crates/parcom-sequences" }
parcom-util = { path = "crates/parcom-util" }
pin-project = "1.1.10"
pollster = "0.3.0"
rand = "0.9.2"
slab = "0.4.11"
tokio = { version = "1.41.0" }
