[package]
name = "parcom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parcom-core = { path = "../parcom-core" }
parcom-macros = { path = "../parcom-macros/macros", optional = true }

[dev-dependencies]
mockalloc = "0.1.2"

[features]
default = ["standard", "foreign"]
full = ["standard", "foreign", "packrat", "macros"]
standard = []
foreign = ["parcom-core/foreign"]
packrat = []
macros = ["dep:parcom-macros"]
