[package]
name = "parcom"
version = "0.0.0"
edition = "2021"


[dependencies]
parcom-core = { path = "../parcom-core", version = "0.0.0" }

[dev-dependencies]
mockalloc = "0.1.2"

[features]
default = ["standard", "foreign"]
full = ["standard", "foreign", "locatable"]
standard = []
foreign = ["parcom-core/foreign"]
locatable = []
