[package]
name = "parcom-parsers"
edition.workspace = true
version.workspace = true

[dependencies]
parcom-core = { workspace = true }
parcom-internals = { workspace = true }
parcom-util = { workspace = true }
pin-project = { workspace = true }

[dev-dependencies]
mockalloc = { workspace = true }
pollster = { workspace = true }
