[package]
name = "parcom-runners"
edition.workspace = true
version.workspace = true

[dependencies]
parcom-core = { workspace = true }
parcom-internals = { workspace = true }
parcom-runner-core = { workspace = true }
parcom-sequence-core = { workspace = true }
parcom-util = { workspace = true }
pin-project = { workspace = true }

[dev-dependencies]
mockalloc = { workspace = true }
pollster = { workspace = true }
