[package]
name = "parcom-streams"
version.workspace = true
edition.workspace = true

[dependencies]
parcom-core = { workspace = true }
slab = "0.4.9"

[dev-dependencies]
pollster = { workspace = true }
rand = "0.8.5"
tokio = { version = "1.41.1", features = ["rt", "macros", "time", "sync"] }

[features]
