[package]
name = "parcom-streams"
version.workspace = true
edition.workspace = true

[dependencies]
parcom-core = { workspace = true }
parcom-streams-core = { workspace = true }
pin-project = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["time", "rt", "macros"] }

[features]
