[package]
name = "parcom-streams"
version.workspace = true
edition.workspace = true

[dependencies]
parcom-core = { workspace = true }
parcom-streams-core = { workspace = true }
pin-project = { workspace = true }
pollster = { workspace = true }
slab = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true, features = ["time", "rt", "macros"] }
mockalloc = { workspace = true }

[features]
